--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,11 @@ deployment:
   dockerhub:
     branch: master
     commands:
-      - $DOCKER_HUB_TRIGGER      
+      - $DOCKER_HUB_TRIGGER
+
+before_install:
+  - "npm config set strict-ssl false"
+  
 test:
   override:    
     - mocha
